--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 FPA_FOD_Plus.csv
-1992_FPA_FOD_cons
-2017_FPA_FOD_cons
-2020_FPA_FOD_cons
+1992_FPA_FOD_cons.csv
+2017_FPA_FOD_cons.csv
+2020_FPA_FOD_cons.csv
